--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | My New Hugo Site</title>
+<title>404 Page not found | Home</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
@@ -80,7 +80,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://example.org/" accesskey="h" title="My New Hugo Site (Alt + H)">My New Hugo Site</a>
+            <a href="http://example.org/" accesskey="h" title="Home (Alt + H)">Home</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -105,6 +105,16 @@
             </div>
         </div>
         <ul id="menu">
+            <li>
+                <a href="http://example.org/cv/" title="CV">
+                    <span>CV</span>
+                </a>
+            </li>
+            <li>
+                <a href="http://example.org/projects/" title="Projects">
+                    <span>Projects</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
@@ -113,7 +123,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="http://example.org/">My New Hugo Site</a></span>
+    <span>&copy; 2023 <a href="http://example.org/">Home</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
