--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,16 @@
 
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://example.org/">
+<link rel="canonical" href="https://chry-santhemum.github.io/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.3613efbd0b1772781e8f49935e973cae632a7f61471c05b17be155505ccf87b5.css" integrity="sha256-NhPvvQsXcngej0mTXpc8rmMqf2FHHAWxe&#43;FVUFzPh7U=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://example.org/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://example.org/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://example.org/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://example.org/apple-touch-icon.png">
-<link rel="mask-icon" href="http://example.org/safari-pinned-tab.svg">
+<link rel="icon" href="https://chry-santhemum.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://chry-santhemum.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://chry-santhemum.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://chry-santhemum.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://chry-santhemum.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://example.org/index.xml">
+<link rel="alternate" type="application/rss+xml" href="https://chry-santhemum.github.io/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -59,7 +59,7 @@
 </noscript><meta property="og:title" content="Home" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="https://chry-santhemum.github.io/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Home"/>
@@ -70,9 +70,9 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "Home",
-  "url": "http://example.org/",
+  "url": "https://chry-santhemum.github.io/",
   "description": "",
-  "thumbnailUrl": "http://example.org/favicon.ico",
+  "thumbnailUrl": "https://chry-santhemum.github.io/favicon.ico",
   "sameAs": [
       "mailto:atticusw@mit.edu", "www.facebook.com/zifan.wang.524/"
   ]
@@ -95,7 +95,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://example.org/" accesskey="h" title="Home (Alt + H)">Home</a>
+            <a href="https://chry-santhemum.github.io/" accesskey="h" title="Home (Alt + H)">Home</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -121,12 +121,12 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://example.org/cv/" title="CV">
+                <a href="https://chry-santhemum.github.io/cv/" title="CV">
                     <span>CV</span>
                 </a>
             </li>
             <li>
-                <a href="http://example.org/projects/" title="Projects">
+                <a href="https://chry-santhemum.github.io/projects/" title="Projects">
                     <span>Projects</span>
                 </a>
             </li>
@@ -163,7 +163,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="http://example.org/">Home</a></span>
+    <span>&copy; 2023 <a href="https://chry-santhemum.github.io/">Home</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
