--- a/public/404.html
+++ b/public/404.html
@@ -106,8 +106,8 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://chry-santhemum.github.io/website/cv/" title="CV">
-                    <span>CV</span>
+                <a href="https://chry-santhemum.github.io/website/resume/" title="Résumé">
+                    <span>Résumé</span>
                 </a>
             </li>
             <li>
