--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>CV | Home</title>
+<title>CV | Atticus Wang</title>
 <meta name="keywords" content="">
 <meta name="description" content="Link">
 <meta name="author" content="">
@@ -103,7 +103,7 @@
   },
   "publisher": {
     "@type": "Organization",
-    "name": "Home",
+    "name": "Atticus Wang",
     "logo": {
       "@type": "ImageObject",
       "url": "https://chry-santhemum.github.io/website/favicon.ico"
@@ -128,7 +128,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://chry-santhemum.github.io/website/" accesskey="h" title="Home (Alt + H)">Home</a>
+            <a href="https://chry-santhemum.github.io/website/" accesskey="h" title="Atticus Wang (Alt + H)">Atticus Wang</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -196,7 +196,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="https://chry-santhemum.github.io/website/">Home</a></span>
+    <span>&copy; 2024 <a href="https://chry-santhemum.github.io/website/">Atticus Wang</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
