--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Home</title>
+<title>Atticus Wang</title>
 
 <meta name="description" content="">
 <meta name="author" content="">
@@ -56,20 +56,20 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Home" />
+</noscript><meta property="og:title" content="Atticus Wang" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://chry-santhemum.github.io/website/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Home"/>
+<meta name="twitter:title" content="Atticus Wang"/>
 <meta name="twitter:description" content=""/>
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Home",
+  "name": "Atticus Wang",
   "url": "https://chry-santhemum.github.io/website/",
   "description": "",
   "thumbnailUrl": "https://chry-santhemum.github.io/website/favicon.ico",
@@ -95,7 +95,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://chry-santhemum.github.io/website/" accesskey="h" title="Home (Alt + H)">Home</a>
+            <a href="https://chry-santhemum.github.io/website/" accesskey="h" title="Atticus Wang (Alt + H)">Atticus Wang</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -176,7 +176,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="https://chry-santhemum.github.io/website/">Home</a></span>
+    <span>&copy; 2024 <a href="https://chry-santhemum.github.io/website/">Atticus Wang</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
