--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Projects | Home</title>
+<title>Projects | Atticus Wang</title>
 <meta name="keywords" content="">
 <meta name="description" content="Notes I put all my math notes in one file. It is, of course, a work in progress. Comments and suggestions are very much appreciated.
 Reading Currently I am learning:
@@ -109,7 +109,7 @@ Chromatic homotopy theory Geometric quantization D-modules Talk to me if you wan
   },
   "publisher": {
     "@type": "Organization",
-    "name": "Home",
+    "name": "Atticus Wang",
     "logo": {
       "@type": "ImageObject",
       "url": "https://chry-santhemum.github.io/website/favicon.ico"
@@ -134,7 +134,7 @@ Chromatic homotopy theory Geometric quantization D-modules Talk to me if you wan
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://chry-santhemum.github.io/website/" accesskey="h" title="Home (Alt + H)">Home</a>
+            <a href="https://chry-santhemum.github.io/website/" accesskey="h" title="Atticus Wang (Alt + H)">Atticus Wang</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -211,7 +211,7 @@ Chromatic homotopy theory Geometric quantization D-modules Talk to me if you wan
     </main>
     
 <footer class="footer">
-    <span>&copy; 2024 <a href="https://chry-santhemum.github.io/website/">Home</a></span>
+    <span>&copy; 2024 <a href="https://chry-santhemum.github.io/website/">Atticus Wang</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
