--- a/public/about/index.html
+++ b/public/about/index.html
@@ -122,6 +122,22 @@ In a parallel universe, I may be a guitarist, a chemist, or a writer."/>
 </script>
 </head>
 
+<head>
+    ...
+    
+      <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+<script>
+  MathJax = {
+    tex: {
+      displayMath: [['\\[', '\\]'], ['$$', '$$']],
+      inlineMath: [['\\(', '\\)'], ['$', '$']]
+    }
+  };
+</script>
+    
+    ...
+</head>
+
 <body class="" id="top">
 <script>
     if (localStorage.getItem("pref-theme") === "dark") {
