--- a/public/cv/index.html
+++ b/public/cv/index.html
@@ -176,6 +176,11 @@
                 </a>
             </li>
             <li>
+                <a href="https://chry-santhemum.github.io/website/seminar/" title="Seminar">
+                    <span>Seminar</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://chry-santhemum.github.io/website/notes/" title="Notes">
                     <span>Notes</span>
                 </a>
